# diaag_nlp_colon

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
diaag-nlp-colon/components/: report_section_filter.py
diaag-nlp-colon/config/colon/: displacy_configs.py  trained_model_labels.py
diaag-nlp-colon/pipelines/: colon_pipelines.py
diaag-nlp-colon/services/: colon_report_buckets.py  file_proc.py  model_eval.py  prop_getters.py
documentation/: DesignNotes.md  DevNotes.md
documentation/contracts/: ColReport.md  PathReport.md  Polyp.md
src/classes/: report.py
src/components/: colo_keyword_filter.py  colo_qi_extractor.py  lesion_property_extractor.py
src/config/: pipeline_configs.py
src/config/colon/: col_patterns.py  path_patterns.py
src/diaag-nlp-colon/classes/: report.py
src/diaag-nlp-colon/components/: colo_keyword_filter.py  false_pos_filter.py  lesion_property_extractor.py  report_section_filter.py
src/diaag-nlp-colon/pipelines/: colon_pipelines.py
src/diaag-nlp-colon/services/: colon_report_buckets.py  model_eval.py
src/diaag_nlp_colon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/diaag_nlp_colon/classes/: report.py  representations.py
src/diaag_nlp_colon/components/: colo_keyword_filter.py  colo_qi_extractor.py  lesion_property_extractor.py  (+1 more)
src/pipelines/: colon_pipelines.py
src/services/: colon_report_buckets.py  file_proc.py  model_eval.py
tests/: helpers.py
tests/colon_tests/: test_colo_path_patterns.py  test_colo_patterns.py
tests/reports/: colo_path_sample.txt  colo_prep_sample.txt  colo_sample.txt
(+22 files in other folders)
