[project]
name = "diaag-nlp-colon"
version = "1.1.0"
authors = [
    { name="Gordon Guyant", email="flashgordonion@gmail.com" },
    { name="Emma Peterson" }
]
description = "A package for extracting information from Colonoscopy and Colon Pathology reports using Spacy"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/DIAAG-Health/diaag-nlp-colon"
Issues = "https://github.com/DIAAG-Health/diaag-nlp-colon/issues"